# semantica

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  PR_DESCRIPTION.md  PR_Description.md  README.md  RELEASE_NOTES.md  SUPPORT.md  docs_check.py  mkdocs.yml  mkdocs_local.yml  pyproject.toml  requirements-docs.txt
.github/: SUPPORT.md
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml  security-scan.yml  security.yml
benchmarks/: benchmarks_runner.py  requirements.txt
benchmarks/context_graph_effectiveness/: report_schema.py  reporting.py  test_deduplication_quality.py  test_reporting_schema.py  test_ses_score.py  test_threshold_provenance.py  threshold_provenance.py  thresholds.py
cookbook/advanced/: 13_Manual_Ontology_Snowflake_Mapping.ipynb  14_Datalog_Style_Reasoning.ipynb
docs/: CodeExamples.md  README.md  architecture.md  citation.md  community-projects.md  community.md  concepts.md  contributing-guide.md  contributing.md  cookbook.md  deep-dive.md  docs.json  examples.md  faq.md  getting-started.md  glossary.md  governance.md  index.md  installation.md  learning-more.md  mkdocs.yml  modules.md  project-license.md  quickstart.md  use-cases.md
docs/css/: custom.css  version-dropdown.css
docs/graph_stores/: apache_age.md
docs/integrations/: agno.md  docling.md  snowflake.md
docs/js/: version-selector.js
docs/reference/: change_management.md  conflicts.md  context.md  core.md  deduplication.md  embeddings.md  evals.md  explorer.md  export.md  graph_store.md  ingest.md  kg.md  llms.md  mcp_server.md  normalize.md  ontology.md  parse.md  pipeline.md  provenance.md  reasoning.md  seed.md  semantic_extract.md  split.md  triplet_store.md  utils.md  vector_store.md  visualization.md
docs/vector_stores/: pgvector.md
examples/: parquet_export_example.py
explorer/: README.md  index.html  package-lock.json  package.json  vite.config.ts
explorer/src/: App.tsx  index.css  types.d.ts
explorer/tests/: graphSceneState.display.test.ts  graphStore.multi-edge.test.mjs
integrations/openclaw/: README.md  __init__.py  mcp_tool.py
mcp/: README.md  __init__.py  __main__.py  schemas.py  server.py  session.py
mcp/resources/: __init__.py  registry.py
mcp/tools/: __init__.py  decisions.py  export.py  extraction.py  graph.py  reasoning.py
plugins/.claude-plugin/: README.md  marketplace.json  plugin.json
plugins/.cline-plugin/: README.md  marketplace.json  plugin.json
plugins/.codex-plugin/: marketplace.json  plugin.json
plugins/.continue-plugin/: README.md  marketplace.json  plugin.json
plugins/.cursor-plugin/: marketplace.json  plugin.json
plugins/.openclaw-plugin/: README.md  marketplace.json  plugin.json
plugins/.vscode-plugin/: README.md  marketplace.json  plugin.json
plugins/.windsurf-plugin/: README.md  marketplace.json  plugin.json
plugins/agents/: decision-advisor.md  explainability.md  kg-assistant.md
plugins/hooks/: hooks.json
semantica/: __init__.py  cli.py  server.py
semantica/change_management/: change_log.py  change_management_usage.md  ontology_version_manager.py
semantica/conflicts/: conflict_detector.py
semantica/context/: __init__.py  agent_context.py  agent_memory.py  causal_analyzer.py  context_graph.py  context_retriever.py
semantica/deduplication/: duplicate_detector.py
semantica/explorer/: __main__.py  app.py  dependencies.py  schemas.py  search_index.py  session.py
semantica/export/: __init__.py  arango_aql_exporter.py  arrow_exporter.py  distance_exporter.py  methods.py  owl_exporter.py  parquet_exporter.py  rdf_exporter.py
semantica/ingest/: __init__.py  file_ingestor.py  ingest_usage.md  methods.py  parquet_ingestor.py  registry.py  snowflake_ingestor.py  xml_ingestor.py
semantica/kg/: __init__.py  centrality_calculator.py  knowledge_graph.py  path_finder.py  provenance_tracker.py  temporal_query.py  temporal_query_rewriter.py
semantica/mcp_server/: __init__.py  __main__.py
semantica/ontology/: __init__.py  engine.py  namespace_manager.py  ontology_generator.py  ontology_validator.py  owl_generator.py
semantica/parse/: media_parser.py
semantica/pipeline/: pipeline_validator.py
semantica/semantic_extract/: __init__.py  llm_extraction.py  methods.py  ner_extractor.py  providers.py  relation_extractor.py  triplet_extractor.py  types.py
semantica/triplet_store/: blazegraph_store.py  triplet_store.py
semantica/utils/: constants.py  helpers.py  progress_tracker.py
semantica/visualization/: kg_visualizer.py
tests/: _smoke_review_fixes.py  test_030_context_graph_realworld_extended.py  test_395_temporal_semantics_comprehensive.py  test_401_temporal_provenance_export.py  test_arango_aql_exporter.py  test_cli_commands.py  test_cli_foundation.py  test_export_module.py  test_issue_554_fixes.py  test_parquet_exporter.py  test_unreleased_changelog_comprehensive.py
tests/change_management/: test_managers.py
tests/context/: test_context_explainability_regression.py  test_distance_intelligence.py  test_temporal_retriever.py
tests/deduplication/: test_deduplication.py
tests/explorer/: test_explorer_api.py  test_ontology_subissue3.py  test_provenance_route.py  test_vocabulary.py
tests/export/: test_owl_exporter.py
tests/ingest/: test_optional_imports.py  test_parquet_ingestor.py  test_xml_ingestor.py
tests/kg/: test_path_finder.py  test_temporal_query_rewriter.py
tests/ontology/: test_ontology_advanced.py  test_ontology_comprehensive.py
tests/semantic_extract/: test_imports.py  test_pr482_deepseek_openai.py  test_retry_logic.py
tests/triplet_store/: test_blazegraph_store.py  test_triplet_store.py
(+105 files in other folders)
